@@ -1,7 +1,7 @@
 #ifndef MYPRINT_H
 #define MYPRINT_H
 
-void myprint(unsigned char scr_mem[], unsigned char x, unsigned char y, char * str);
+void myprint(unsigned char x, unsigned char y, char * str);
 
 #endif // MYPRINT_H
 
